--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^10.2.0",
     "@radix-ui/react-slot": "^1.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.14.4",
