--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.0.2"
+    "react-typed": "^2.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
