--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,5 @@
   "singleQuote": true,
   "jsxSingleQuote": true,
   "experimentalTernaries": true,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
 }
